--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@pittica/gatsby-plugin-utils",
   "private": false,
   "description": "Utilities plugin for GatsbyJS.",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "author": {
     "name": "Lucio Benini",
     "email": "info@pittica.com",
@@ -21,19 +21,45 @@
   ],
   "dependencies": {
     "prop-types": "^15.7.2",
-    "gatsby-plugin-react-helmet": "^4.8.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "^4.0.3"
   },
   "devDependencies": {
-    "gatsby": "^3.8.0",
-    "react": "^17.0.2"
+    "@babel/cli": "^7.14.5",
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.5"
   },
   "license": "MIT",
-  "main": "index.js",
+  "main": "dist/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/pittica/gatsby-plugin-utils.git"
   },
   "config": {
     "access": "public"
+  },
+  "scripts": {
+    "test": "react-scripts test",
+    "prepare": "rimraf ./dist && mkdirp ./dist && babel src --out-dir dist --copy-files"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "babel": {
+    "presets": [
+      [
+        "@babel/env",
+        {
+          "targets": {
+            "edge": "17",
+            "firefox": "60",
+            "chrome": "67",
+            "safari": "11.1"
+          }
+        }
+      ],
+      "@babel/preset-react"
+    ]
   }
 }
