--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@pittica/gatsby-plugin-utils",
   "private": false,
   "description": "Utilities plugin for GatsbyJS.",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "author": {
     "name": "Lucio Benini",
     "email": "info@pittica.com",
@@ -22,13 +22,12 @@
   "dependencies": {
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.14.5",
-    "@babel/core": "^7.14.6",
-    "@babel/preset-env": "^7.14.5"
+    "@babel/cli": "^7.14.8",
+    "babel-preset-gatsby-package": "^1.12.0",
+    "react-scripts": "^4.0.3"
   },
   "license": "MIT",
   "main": "dist/index.js",
@@ -48,18 +47,7 @@
   },
   "babel": {
     "presets": [
-      [
-        "@babel/env",
-        {
-          "targets": {
-            "edge": "17",
-            "firefox": "60",
-            "chrome": "67",
-            "safari": "11.1"
-          }
-        }
-      ],
-      "@babel/preset-react"
+      "babel-preset-gatsby-package"
     ]
   }
 }
